# roxy-dbc

./: CHANGELOG.md  Cargo.toml  README.md
dbc-sample/: can_data_ev1.dbc  empty.dbc  motbus.dbc  motbus_ext.dbc  motbus_ext_2.dbc
src/: app.rs  dbc.rs  edit_history.rs  edit_history_integration.rs  editable_dbc.rs  lib.rs  main.rs  ui.rs
src/ui/: dbc_window.rs  dialogs.rs  menu.rs  message_create_window.rs  message_edit_window.rs  message_window.rs  mod.rs  signal_edit_window.rs  signal_window.rs  state.rs  view.rs
src/ui/tests/: delete_undo.rs
tests/: delete_undo.rs
