[package]
name = "roxy-dbc"
version = "0.5.0"
edition = "2024"

[dependencies]
can-dbc = "6.0.0"
imgui-wgpu = "0.25"
bytemuck = "1"
imgui = { version = "0.12", features = ["docking", "tables-api"] }
log = "0.4"
wgpu = "25.0.2"
winit = "0.30"
imgui-winit-support = "0.13"
pollster = "0.4"
env_logger = "0.11"
rfd = "0.14"
